<resources>
    <string name="app_name">51Ags</string>

    <string name="phone_number_login">手机号登录</string>
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="identifying_code">验证码</string>
    <string name="please_input_identifying_code">请输入验证码</string>
    <string name="down_arrow">∟</string>
    <string name="do_login">登录</string>
    <string name="selected">精选</string>
    <string name="video">视频</string>
    <string name="oto_video">1V1视频</string>
    <string name="private_photo">私密照</string>
    <string name="my">我的</string>
    <string name="content_is_null">内容为空</string>
    <string name="net_disconnect">加载错误</string>
    <string name="reload">重新加载</string>
    <string name="double_click_exit">再按一次退出程序</string>
    <string name="do_login_will_agree_agreement">登录即表示同意《用户协议》</string>
    <string name="selected_recommend">精选推荐</string>
    <string name="more_models">更多嫩模 ></string>
    <string name="follow_person_moment">关注人的动态</string>
    <string name="near_relation_rank">大蜜榜</string>
    <string name="hot_live_rank">热播榜</string>
    <string name="hot_rich_rank">土豪榜</string>
    <string name="day_rank">日榜</string>
    <string name="week_rank">周榜</string>
    <string name="month_rank">月榜</string>
    <string name="list_footer_loading">正在加载中…</string>
    <string name="list_footer_network_error">点击重新加载</string>
    <string name="list_footer_end">已经到底了</string>

    <string name="friend">好友</string>
    <string name="follow">关注</string>
    <string name="big_v">大V</string>
    <string name="new_show">新秀</string>
    <string name="fans">粉丝</string>
    <string name="cancel">取消</string>

    <string name="new_video">最新</string>
    <string name="recommend_video">推荐</string>
    <string name="hot_video">热门</string>
    <string name="vr_video">VR</string>
    <string name="mini_video">MINI剧</string>


    <string name="new_album">最新</string>
    <string name="hot_album">最热</string>
    <string name="popularity_album">人气</string>
    <string name="portrait_album">明星写真</string>
    <string name="hat_album">帽控</string>
    <string name="yoga_album">瑜伽</string>


    <string name="todo_share">去邀请</string>
    <string name="share_welfare">邀请福利</string>
    <string name="unlocking_times">解锁次数</string>
    <string name="share_friends">邀请好友</string>
    <string name="daily_tasks">每日任务</string>
    <string name="my_money_bag">我的钱包</string>
    <string name="collection_and_bought">收藏和已购</string>
    <string name="authentication_center">认证中心</string>
    <string name="not_disturb_model">勿扰模式</string>
    <string name="not_receive_video_chat">不接收视频来电</string>
    <string name="safe_model">安全模式</string>
    <string name="service_center">客服中心</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="clear_cache">清除缓存</string>
    <string name="check_update">检查更新</string>
    <string name="logout">退出登录</string>
    <string name="setting">设置</string>

    <string name="asian_model_stars">亚模之星</string>
    <string name="please_input_feedback">请输入您对我们的建议</string>
    <string name="my_lollipop">我的棒棒糖</string>
    <string name="my_diamonds">我的钻石</string>
    <string name="recharge">充值</string>
    <string name="budget_definite">收支明细</string>
    <string name="cash_withdrawal">提现</string>
    <string name="address_book">通讯录</string>
    <string name="comment">评论</string>
    <string name="all_comment">全部评论</string>
    <string name="please_comment">评论吧...</string>
    <string name="let_me_say_two_words">我来说两句...</string>
    <string name="send">发送</string>

    <string name="lollipop_authenticate_agreement">棒棒糖认证协议</string>
    <string name="authenticate_new_model">认证成为模特</string>
    <string name="on_spotlight_stage_show_play">登上聚光灯舞台，展现精彩</string>
    <string name="authenticate_new_photographer">认证成为摄影师</string>
    <string name="together_discover_and_create_value">共同发现美，共同创造价值</string>
    <string name="lollipop_authenticate_agreement_content">&#12288;&#12288;协议书有广义和狭义之分。广义的协议书是指社会集团或个人处理各种社会关系、事务时常用的“契约”类文书，包括合同、议定书、条约、公约、联合宣言、联合声明、条据等。狭义的协议书指国家、政党、企业、团体或个人就某个问题经过谈判或共同协商，取得一致意见后，订立的一种具有经济或其它关系的契约性文书。协议书是应用写作的重要组成部分。</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="upload_head_pic">上传头像</string>
    <string name="platform_nick_name">平台昵称</string>
    <string name="gender">性别</string>
    <string name="city_where">所在城市</string>
    <string name="identity_authenticate">身份认证</string>
    <string name="upload_representative_works">上传代表作品</string>
    <string name="please_input_you_nick_name">请输入你的昵称</string>
    <string name="not_input">未填写</string>
    <string name="not_add">未添加</string>
    <string name="not_select">未选择</string>
    <string name="finish">完成</string>
    <string name="sure">确定</string>
    <string name="please_select">请选择</string>
    <string name="select_city">选择地点</string>
    <string name="select_gender">选择性别</string>
    <string name="select_height">选择身高</string>
    <string name="select_weight">选择体重</string>
    <string name="select_constellation">选择星座</string>
    <string name="select_three_circles">选择三围</string>
    <string name="select_occupation_tag">选择职业标签</string>
    <string name="goto_open">去开启</string>
    <string name="permission_not_open_tip">您的权限未开启，请在系统设置页面开启后重试</string>
    <string name="real_name">真实姓名</string>
    <string name="please_input_you_real_name">请输入你的真实姓名</string>
    <string name="identity_id_number">身份证号</string>
    <string name="please_input_you_identity_id_number">请输入你的身份证号</string>
    <string name="identity_positive_and_negative_photo">身份证明正、反两面照片</string>
    <string name="identity_positive_photo">身份证明正面</string>
    <string name="identity_negative_photo">身份证明反面</string>
    <string name="hold_identity_negative_photo">手持身份证明正面照片</string>
    <string name="upload">上传</string>
    <string name="please_upload_5_to_9_work_photo">请上传5-9张代表作品</string>
    <string name="auth_video_edit_fail">视频编辑失败</string>
    <string name="auth_video_record_fail">视频录制失败</string>
    <string name="auth_video_please_retry_record">中途退出，请重新录制</string>

    <string name="auth_video_read_title">请按照要求进行视频认证：请你本人正脸上半身入镜宣读下面文本内容</string>
    <string name="auth_video_read_tip">其中：xxx替换为您的真实姓名</string>
    <string name="auth_video_read_content">我是xxx，我申请成为棒棒糖认证模特\n我的认证码是：%1$s</string>
    <string name="video_authenticate">视频认证</string>
    <string name="add_wechat">添加微信</string>
    <string name="wechat_number">微信号</string>
    <string name="please_input_you_wechat_number">输入你的微信号</string>
    <string name="price">价格</string>
    <string name="select_price">选择价格</string>
    <string name="signature">个性签名</string>
    <string name="please_input_signature">请输入个性签名</string>
    <string name="occupation_tag">职业标签</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="three_circles">三围</string>
    <string name="bust_circle">胸围</string>
    <string name="waist_circle">腰围</string>
    <string name="hip_circle">臀围</string>
    <string name="constellation">星座</string>
    <string name="most_satisfactory_position">最满意的部位</string>
    <string name="views_on_sex">对性的看法</string>
    <string name="you_submit_info_we_have_received">你提交的认证资料我们已经收到</string>
    <string name="please_add_service_wechat_for_authentication">请加客服微信，进行认证</string>
    <string name="click_replication">点击复制</string>
    <string name="submit_examine">提交审核</string>
    <string name="submit_success">提交成功</string>
    <string name="submit_fail">提交失败</string>
    <string name="i_know">我知道了</string>
    <string name="copied_to_pasteboard">已复制到粘贴板</string>
    <string name="my_user_info">个人资料</string>
    <string name="upload_background_pic">上传背景图</string>
    <string name="nick_name">昵称</string>
    <string name="save">保存</string>

</resources>
