<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_authenticate_agreement"
    android:padding="20dp"
    android:orientation="vertical">


    <TextView
        android:layout_marginBottom="18dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/lollipop_authenticate_agreement"
        android:textColor="@color/color_333333"
        android:textSize="16sp" />


    <androidx.core.widget.NestedScrollView
        android:scrollbars="none"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="#FFFFFF">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lollipop_authenticate_agreement_content"
                android:textColor="@color/color_9EA7B9"
                android:textSize="14sp" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>



    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:background="@drawable/bg_authenticate_agreement_refuse_btn"
            android:id="@+id/refuseView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="36dp"
            android:paddingTop="6dp"
            android:paddingRight="36dp"
            android:paddingBottom="6dp"
            android:text="@string/refuse"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"/>

        <TextView
            android:background="@drawable/bg_authenticate_agreement_agree_btn"
            android:id="@+id/agreeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="36dp"
            android:paddingTop="6dp"
            android:paddingRight="36dp"
            android:paddingBottom="6dp"
            android:text="@string/agree"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>



</LinearLayout>