<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/include_common_title_layout"/>


    <androidx.core.widget.NestedScrollView
        android:scrollbars="none"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_marginTop="80dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_renzhneg_tijiao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/you_submit_info_we_have_received"
                android:layout_width="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/color_333333"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/please_add_service_wechat_for_authentication"
                android:layout_width="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/color_9EA7B9"
                android:layout_height="wrap_content"/>


            <LinearLayout
                android:layout_marginTop="25dp"
                android:paddingTop="11dp"
                android:paddingBottom="11dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:background="@drawable/bg_authenticate_info_success_add_wechat"
                android:id="@+id/weChatLayout"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/weChatView"
                    android:textSize="15sp"
                    android:layout_marginRight="60dp"
                    android:textColor="@color/color_FD596A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/click_replication"
                    android:textSize="13dp"
                    android:textColor="@color/color_9EA7B9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </LinearLayout>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>



    <TextView
        android:id="@+id/submitView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center"
        android:text="@string/i_know"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/bg_select_identity_info_upload_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>