<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:overScrollMode="never"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/closeView"
            android:padding="20dp"
            android:src="@drawable/ic_close_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/color_333333"
            android:text="@string/phone_number_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/countryCodeLayout"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/countryCodeView"
                    android:textSize="15sp"
                    android:textColor="@color/color_9EA7B9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginLeft="5dp"
                    android:rotation="-45"
                    android:textColor="@color/color_9EA7B9"
                    android:textSize="10sp"
                    android:text="@string/down_arrow"
                    android:textStyle="bold"
                    android:paddingBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <EditText
                android:id="@+id/inputPhoneNumberView"
                android:digits="0123456789"
                android:singleLine="true"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@null"
                android:textColorHint="@color/color_BECCD9"
                android:textColor="@color/color_333333"
                android:hint="@string/please_input_phone_number"
                android:inputType="phone"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <View
            android:background="@color/color_F2F2F2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>


        <LinearLayout
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:textSize="15sp"
                android:text="@string/identifying_code"
                android:textColor="@color/color_9EA7B9"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/inputIdentifyingCodeView"
                android:digits="0123456789"
                android:singleLine="true"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@null"
                android:textColorHint="@color/color_BECCD9"
                android:textColor="@color/color_333333"
                android:hint="@string/please_input_identifying_code"
                android:inputType="phone"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"/>


            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/sendIdentifyingCodeView"
                    android:visibility="visible"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:background="@drawable/login_bg_identifying_code"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:text="@string/identifying_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:id="@+id/timeIdentifyingCodeView"
                    android:visibility="gone"
                    android:gravity="center_vertical|right"
                    android:textColor="@color/color_BECCD9"
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </FrameLayout>


        </LinearLayout>

        <View
            android:background="@color/color_F2F2F2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>


        <TextView
            android:id="@+id/doLoginView"
            android:layout_marginTop="80dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="center"
            android:background="@drawable/login_bg_do_login"
            android:text="@string/do_login"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/agreementView"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="17dp"
            android:textSize="12sp"
            android:textColor="@color/color_BECCD9"
            android:gravity="center"
            android:text="@string/do_login_will_agree_agreement"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>